chore: Add TypeScript definitions and docs for TypeScript and React usage (#233)
* docs: add React usage

* docs: add typescript definitions and docs

* Delete test.ts

Co-authored-by: Liucw <liucw.mail@gmail.com>

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "GitHub"
   ],
   "main": "dist/gitalk.js",
+  "types": "typings/index.d.ts",
   "scripts": {
     "prepublishOnly": "npm run build",
     "dev": "cross-env NODE_ENV=development webpack-dev-server --inline --hot --no-info --progress",
